--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,30 @@
 .App {
-  text-align: center;
+  background-color: rgb(246, 246, 246);
+  padding-top: 10px;
 }
 
-.App-logo {
-  height: 40vmin;
+.h1Box {
+  padding: 20px 0 20px 40px;
+  margin: 15px 70px;
+  background-color: #fff;
+  border-radius: 5px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+h1 {
+  margin: 0;
+  font-size: 150%;
+  display: inline;
+  color: black
 }
 
-.App-link {
-  color: #09d3ac;
+button {
+  cursor: pointer
+}
+
+button:focus {
+  outline:0
+}
+
+.homepage {
+  text-decoration: none;
 }
